# gitgood

./: .gitignore  .gitmodules  README.md
c/: .gitignore  prints.c
c++/build-guiapp-Desktop_Qt_6_6_1_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
c++/build-guiapp-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
c++/build-guiapp-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
c++/dns_list_sorter/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config-example.toml  config.toml
c++/dns_list_sorter/src/: dns_list_sorter.cpp
c++/first_test/: CMakeLists.txt  a.out  main.cpp
c++/guiapp/: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp
c++/snippets/: a.out  can_place_flowers.cpp  container_with_most_water.cpp  determen_if_two_strings_are_close.cpp  fizz_buzz.cpp  greatest_common_divisor_of_strings.cpp  house_robber.cpp  increase_triplet_subsequence.cpp  is_subsequence.cpp  kids_with_the_gratest_number_of_candies.cpp  max_numer_of_k_sum_pairs.cpp  merge_strings_alternatevly.cpp  middle_of_the_linked_list.cpp  move_zeroes.cpp  number_of_recent_calls.cpp  number_of_steps_to_reduce_a_number_to_zero.cpp  product_of_array_except_self.cpp  ransom_note.cpp  regular_expression_matching.cpp  reverse_vowels_of_a_string.cpp  reverse_words_in_a_string.cpp  string_compression.cpp  two_sum.cpp
c++/snippets/header_gard_usecase/: main.cpp  square.h
c++/snippets/header_usecase/: main.cpp  notes.md
c++/snippets/header_usecase_test/: add.cpp
go/AdvancedGoPromgrammingCourse/: countingPaths.go  go.mod  localCache.go  localCacheMultiThreadSafe.go  main.go  rollingmean.go
go/fibonacci/: fibonacci.go  go.mod
go/go-starting-template/: README.md
go/go-starting-template/greetings/: go.mod
go/go-starting-template/hello/: go.mod  hello.go
go/ocis-hello/: Makefile  bun.lockb  go.mod  go.sum  package-lock.json  package.json
guessing_game/src/: main.rs
java/: .gitignore
java/guessing_game/: Main.java
java/homepage/: build.gradle  settings.gradle
java/length_of_last_word/: Main.java
java/simple_restservice/: pom.xml
java/simple_web_server/: pom.xml
java/tik_tac_toe/: Main.java
linux/: README.md
proxy/caddy-config/: Dockerfile  LICENSE  README.md
proxy/lighttpd-config/: incl-auth-htpasswd.conf  incl-cgi-bin.conf  incl-docroot.conf  incl-https-socket.conf  incl-redir-http-to-https.conf  lighttpd.conf
python/: .gitignore
python/blog-base-py/: .gitignore  LICENSE  README.md  requirements.txt
python/blog-base-py/blog_site/: asgi.py  settings.py  urls.py
python/blog-base-py/posts/: admin.py  models.py  url.py  views.py
python/fastAPI_comment_server/: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  toml-config.py  user.py
python/fastAPI_comment_server/models/: __init__.py  auth.py  check.py  comment.py  user.py
python/fastAPI_postgres_template/: .gitignore  LICENSE  pyproject.toml
python/fastAPI_postgres_template/app/: config.py  example-config.toml  test.py
python/fastAPI_template/: README.md  pyproject.toml
python/fastAPI_template/app/routers/: users.py
python/fibonacci/: fibonacci.py
python/github_profile/: github_profile.py
python/lets_remember_django/: db.sqlite3  pyrightconfig.json  requirements.txt
python/lets_remember_django/comments/: admin.py  models.py  urls.py  views.py
python/lets_remember_django/djangotutorial/: db.sqlite3
python/lets_remember_django/mysite/: settings.py  urls.py
python/lets_remember_django/polls/: admin.py  models.py  tests.py  urls.py  views.py
python/majority_element/: majority_element.py
python/simple_web_server/: README.md
python/simple_web_server/mysite/: settings.py  urls.py
python/simple_web_server/polls/: admin.py  tests.py  url.py  views.py
python/simple_web_server_package/: LICENSE  setup.cfg
python/simple_web_server_package/django_polls.egg-info/: PKG-INFO  SOURCES.txt
python/simple_web_server_package/polls/: url.py
python/test_dir/: test.py
python/trapping_rain_water/: trapping_rain_water.py
python/turtle/: main.py
rust/blogserver/: Cargo.toml
rust/bookreader/: Cargo.toml
rust/bookreader/src/: main.rs
rust/bookreader/src/book/: epub.rs  error.rs  mod.rs  page.rs
rust/bookreader/src/page/: error.rs  mod.rs
rust/bookreader/src/user/: mod.rs
rust/cliExamples/clicreation_uiv1/: Cargo.toml
rust/cliExamples/clicreation_uiv2/: Cargo.toml
rust/cliExamples/clicreation_uiv3/: Cargo.toml
rust/cliExamples/clicreationv2/: Cargo.toml
rust/cliExamples/picture_converttool/: Cargo.toml
rust/esp_test/esp_test/: Cargo.toml  cfg.toml
rust/esp_test/std-training/: source.txt
rust/fibonacci/src/: main.rs
rust/gandi-ddns-rs/: .gitignore  Cargo.toml  README.md
rust/gandi-ddns-rs/src/: check_records.rs  dns_providers.rs  get_ip.rs  main.rs  record_parser.rs  update_records.rs
rust/guessing_game/src/: main.rs
rust/guitesting/: Cargo.toml  SOURCE.md
rust/guitesting/src/: main.rs
rust/majority_element/src/: main.rs
rust/merge_sorted_array/src/: main.rs
rust/remove_duplicates_from_sorted_array/src/: main.rs
rust/remove_duplicates_from_sorted_array_harder/src/: main.rs
rust/remove_element/src/: main.rs
rust/roman_to_int/src/: main.rs
rust/rotate_array/src/: main.rs
rust/web_data_info/: Cargo.toml  source.md
web/AstroBlogTest/: bun.lockb  package.json
web/Real-World-Vue-3-New-Syntax/: package-lock.json  package.json
web/Touring-Vue-Router-Composition-API/: package-lock.json  package.json
web/astroTest/: astro.config.mjs  bun.lockb  package.json
web/create/project-frontend/: bun.lockb  package.json
web/create/project-name/: README.md  package-lock.json  package.json
web/pinia-fundamentals/: package-lock.json  package.json
web/static-svelte-blog/: README.md  bun.lockb  package.json  svelte.config.js
web/todo-app/: package-lock.json  package.json
web/todo-app/src/: App.vue
web/vue-dark-template/: package-lock.json
(+310 files in other folders)
