[package]
name = "blogserver"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.10"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Metrics Layer
axum-prometheus = "0.7.0"
# -- Others
time = "0.3"
uuid = { version = "1", features = ["v4", "fast-rng"] }
strum_macros = "0.26"
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
