[package]
name = "bookreader"
version = "0.1.0"
edition = "2021"

[dependencies]
epub = "2.1.2"
# -- Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Others
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
