[package]
name = "ddns-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
rust-ini = "0.19"
reqwest = "0.11.18"
log = "0.4.19"
public-ip = "0.2.2"
tokio = {version= "1.28.2", features = ["full"]}